# rust-screeps-api

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
examples/: me.rs  register.rs  top10.rs  ws-console.rs  ws-debug.rs  ws_debug.rs
protocol-docs/: websocket-examples.md  websocket.md
src/: connecting.rs  data.rs  docs.rs  error.rs  lib.rs  sockets.rs  sync.rs
src/data/: errors.rs  mod.rs  room_name.rs  rooms.rs  users.rs
src/decoders/: mod.rs  null_as_default.rs  numbers.rs  timespec.rs
src/endpoints/: leaderboard_season_list.rs  login.rs  map_stats.rs  memory_segment.rs  mod.rs  my_info.rs  recent_pvp.rs  register.rs  room_overview.rs  room_status.rs  room_terrain.rs  rooms_terrain.rs  set_memory_segment.rs  shards.rs  template.rs  world_size_info.rs  world_start_room.rs
src/endpoints/leaderboard/: constants.rs  find_rank.rs  mod.rs  page.rs  season_list.rs
src/sockets/: error.rs  message-docs-wip.md  mod.rs  parsing.rs
src/sockets/parsing/: mod.rs
src/sockets/parsing/updates/: messages.rs  mod.rs  room.rs  room_map_view.rs  user_console.rs  user_cpu.rs
src/websocket/: channel.rs  commands.rs  connecting.rs  error.rs  mod.rs
src/websocket/parsing/: error.rs  mod.rs
src/websocket/parsing/updates/: messages.rs  room_map_view.rs  user_console.rs  user_cpu.rs
src/websocket/types/: messages.rs  mod.rs  room.rs  room_map_view.rs  user_console.rs  user_cpu.rs
src/websocket/types/room/: flags.rs  mod.rs  objects.rs  resources.rs  room_object_macros.rs
src/websocket/types/room/objects/: construction_site.rs  container.rs  controller.rs  creep.rs  extension.rs  extractor.rs  keeper_lair.rs  lab.rs  link.rs  mineral.rs  mod.rs  nuker.rs  observer.rs  portal.rs  power_bank.rs  power_creep.rs  power_spawn.rs  rampart.rs  resource.rs  road.rs  shared.rs  source.rs  spawn.rs  storage.rs  terminal.rs  test-stream.json  tombstone.rs  tower.rs  wall.rs
tests/: authenticated_tests.rs  unauthenticated_tests.rs
